--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
 		<script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
+		<script src="bower_components/jquery-ui/ui/dialog.js"></script>
 		<script src="lib/Tombola.js"></script>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
+		<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" />
+		<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/theme.css" />
 		<link rel="stylesheet" href="lib/Tombola.css" />
 	</head>
 <body>
 	<div class="container-fluid">
 		<div id="header" class="row-fluid ">
 			<div class=" page-header">
-				<h1 id="head-title" class="col-md-10 col-xs-7">
-					
+				<h1 id="head-title" class="col-md-9 col-xs-7">
 				</h1>
 					<div class="nav right" role="group" aria-label="Strumenti">
 					  <button id="estrai" type="button" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-plus-sign"></span> Estrai numeri</button>
@@ -29,6 +31,9 @@
 			</div>
 			
 		</div>
+	</div>
+	<div id="dlgnotifiche" class="container">
+		<span id="numero_estratto" class="col-md-12"></span>
 	</div>
 </body>
 </html>
