fix tabellone. add informazioni aggiuntive: ultimi numeri estratti.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 			</div>
 		</div>
 		<div id="content" class="row-fluid">
-			<div id="tabellone" class="col-md-12">
+			<div id="tabellone" class="col-md-10">
 			</div>
-			
+			<div id="tabellone_info" class="col-md-2">
+			</div>
 		</div>
 	</div>
 	<div id="dlgnotifiche" class="container">
