add dialog jquery.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 	<div class="container-fluid">
 		<div id="header" class="row-fluid ">
 			<div class=" page-header">
-				<h1 id="head-title" class="col-md-9 col-xs-7">
-				</h1>
+				<h1 id="head-title" class="col-md-9 col-xs-7" onclick="rinominaTombola(this)"></h1>
 					<div class="nav right" role="group" aria-label="Strumenti">
 					  <button id="estrai" type="button" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-plus-sign"></span> Estrai numeri</button>
 					  <button id="reset" type="button" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-retweet"></span> Reset</button>
